--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "buy-and-sell",
   "version": "1.0.0",
   "description": "Куплю. Продам",
-  "main": "index.js",
+  "main": "./src/service/service.js",
   "scripts": {
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/",
