--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/",
     "start": "node ./src/service/service.js",
-    "start.dev": "nodemon ./src/service/service.js --server"
+    "start.dev": "nodemon ./src/service/service.js --server",
+    "start-front-server": "nodemon ./src/express/index.js"
   },
   "author": "Александр Демченко",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "nodemon": "2.0.6"
   },
   "dependencies": {
-    "chalk": "4.1.0"
+    "chalk": "4.1.0",
+    "express": "4.17.1"
   }
 }
