--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "chalk": "4.1.0",
     "express": "4.17.1",
+    "express-validator": "^6.7.0",
+    "nanoid": "^3.1.18",
     "pug": "3.0.0"
   }
 }
